fix parrots overflowing the screen

--- a/play/UI/hud.less
+++ b/play/UI/hud.less
@@ -634,6 +634,8 @@ h1.centered {
         border-radius: 1rem;
         padding: .75rem;
         max-width: 50vw;
+        max-height: 66vh;
+        overflow-y: auto;
     }
     #parrot-reply {
         margin-top: 2rem;
